# llm-benchmark

./: .env.benchmark  .gitignore  .pre-commit-config.yaml  Makefile  benchmark_llm.py  pyproject.toml
.github/workflows/: ci.yml
docker_composes/: docker-compose.tensorrt-llm.yml  docker-compose.vllm.yml
docker_composes/scripts/: tensorrt_startup.sh
dockerfiles/: Dockerfile.vllm
src/common/: __init__.py  logger.py  models.py  utils.py
src/tensorrt_llm_server/: __init__.py  engine.py  main.py  routes.py  streaming.py
src/vllm_server/: __init__.py  engine.py  main.py  routes.py  streaming.py
